--- a/src/uni.scss
+++ b/src/uni.scss
@@ -14,6 +14,19 @@
 
 /* 颜色变量 */
 
+// 操作颜色  例如按钮的背景色
+$uni-operation-error: #f98193;
+// 操作文字颜色
+$uni-operation-text: #ffffff;
+// 文字颜色
+$uni-text-color: #151515;
+// 文字副颜色
+$uni-text-color-placeholder: #c8bfbf;
+// 图标点缀色
+$uni-icon-color: #fd686e;
+// 卡片背景色
+$uni-card-bg-color: #f7f7fa;
+
 /* 行为相关颜色 */
 $uni-color-primary: #007aff;
 $uni-color-success: #4cd964;
@@ -21,20 +34,19 @@ $uni-color-warning: #f0ad4e;
 $uni-color-error: #dd524d;
 
 /* 文字基本颜色 */
-$uni-text-color: #333; // 基本色
-$uni-text-color-inverse: #fff; // 反色
-$uni-text-color-grey: #999; // 辅助灰色，如加载更多的提示信息
+$uni-text-color-inverse: #ffffff; // 反色
+$uni-text-color-black: #333333; // 辅助灰色，如加载更多的提示信息
 $uni-text-color-placeholder: #808080;
 $uni-text-color-disable: #c0c0c0;
 
 /* 背景颜色 */
-$uni-bg-color: #fff;
+$uni-bg-color: #00cec9;
 $uni-bg-color-grey: #f8f8f8;
 $uni-bg-color-hover: #f1f1f1; // 点击状态颜色
 $uni-bg-color-mask: rgba(0, 0, 0, 0.4); // 遮罩颜色
 
 /* 边框颜色 */
-$uni-border-color: #c8c7cc;
+$uni-border-color: #dfe6e9;
 
 /* 尺寸变量 */
 
