feat: 撰稿人功能完成

--- a/src/static/iconfont.css
+++ b/src/static/iconfont.css
@@ -11,6 +11,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-wushuju:before {
+  content: '\e616';
+}
+
 .icon-shu:before {
   content: '\e600';
 }
